attached_assets/Pasted-afterJoinEnd-PageSyncing-Loaded-incrementally-Object-vendor-core-0d62532059ea4067-min-js-br-77-Loc-1751805044522_1751805044523.txt
afterJoinEnd PageSyncing: Loaded incrementally Object
vendor-core-0d62532059ea4067.min.js.br:77 [Local fonts] using agent
vendor-core-0d62532059ea4067.min.js.br:77 Syntax error on line 336: Unexpected token .
      if (typography?.textAlign) {
                     ^
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:77
await in (anonymous)
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:738
await in (anonymous)
eu @ 7982-7f3b8988be551dc8.min.js.br:738
ed @ 7982-7f3b8988be551dc8.min.js.br:738
await in ed
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:738
await in (anonymous)
enqueue @ figma_app-f1bcbbd97adc86a8.min.js.br:68
X @ 7982-7f3b8988be551dc8.min.js.br:205
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:205
(anonymous) @ figma_app-f1bcbbd97adc86a8.min.js.br:269
push.320953.Object.assign.system @ 7982-7f3b8988be551dc8.min.js.br:1460
user @ 7982-7f3b8988be551dc8.min.js.br:1460
onSelectItem @ figma_app-f1bcbbd97adc86a8.min.js.br:269
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:1365
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:1365
ez @ vendor-core-0d62532059ea4067.min.js.br:15
e$ @ vendor-core-0d62532059ea4067.min.js.br:15
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:15
tn @ vendor-core-0d62532059ea4067.min.js.br:15
ti @ vendor-core-0d62532059ea4067.min.js.br:15
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:15
oL @ vendor-core-0d62532059ea4067.min.js.br:15
eM @ vendor-core-0d62532059ea4067.min.js.br:15
tu @ vendor-core-0d62532059ea4067.min.js.br:15
nz @ vendor-core-0d62532059ea4067.min.js.br:15
nI @ vendor-core-0d62532059ea4067.min.js.br:15
t @ vendor-core-0d62532059ea4067.min.js.br:77
vendor-core-0d62532059ea4067.min.js.br:77 Error: Syntax error on line 336: Unexpected token .
    at q (7982-7f3b8988be551dc8.min.js.br:608:45)
    at async 7982-7f3b8988be551dc8.min.js.br:738:9483
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:77
Promise.catch
eu @ 7982-7f3b8988be551dc8.min.js.br:738
ed @ 7982-7f3b8988be551dc8.min.js.br:738
await in ed
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:738
await in (anonymous)
enqueue @ figma_app-f1bcbbd97adc86a8.min.js.br:68
X @ 7982-7f3b8988be551dc8.min.js.br:205
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:205
(anonymous) @ figma_app-f1bcbbd97adc86a8.min.js.br:269
push.320953.Object.assign.system @ 7982-7f3b8988be551dc8.min.js.br:1460
user @ 7982-7f3b8988be551dc8.min.js.br:1460
onSelectItem @ figma_app-f1bcbbd97adc86a8.min.js.br:269
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:1365
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:1365
ez @ vendor-core-0d62532059ea4067.min.js.br:15
e$ @ vendor-core-0d62532059ea4067.min.js.br:15
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:15
tn @ vendor-core-0d62532059ea4067.min.js.br:15
ti @ vendor-core-0d62532059ea4067.min.js.br:15
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:15
oL @ vendor-core-0d62532059ea4067.min.js.br:15
eM @ vendor-core-0d62532059ea4067.min.js.br:15
tu @ vendor-core-0d62532059ea4067.min.js.br:15
nz @ vendor-core-0d62532059ea4067.min.js.br:15
nI @ vendor-core-0d62532059ea4067.min.js.br:15
t @ vendor-core-0d62532059ea4067.min.js.br:77
vendor-core-0d62532059ea4067.min.js.br:77 Error: Syntax error on line 336: Unexpected token .
    at q (7982-7f3b8988be551dc8.min.js.br:608:45)
    at async 7982-7f3b8988be551dc8.min.js.br:738:9483
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:77
await in (anonymous)
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:738
await in (anonymous)
enqueue @ figma_app-f1bcbbd97adc86a8.min.js.br:68
X @ 7982-7f3b8988be551dc8.min.js.br:205
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:205
(anonymous) @ figma_app-f1bcbbd97adc86a8.min.js.br:269
push.320953.Object.assign.system @ 7982-7f3b8988be551dc8.min.js.br:1460
user @ 7982-7f3b8988be551dc8.min.js.br:1460
onSelectItem @ figma_app-f1bcbbd97adc86a8.min.js.br:269
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:1365
(anonymous) @ 7982-7f3b8988be551dc8.min.js.br:1365
ez @ vendor-core-0d62532059ea4067.min.js.br:15
e$ @ vendor-core-0d62532059ea4067.min.js.br:15
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:15
tn @ vendor-core-0d62532059ea4067.min.js.br:15
ti @ vendor-core-0d62532059ea4067.min.js.br:15
(anonymous) @ vendor-core-0d62532059ea4067.min.js.br:15
oL @ vendor-core-0d62532059ea4067.min.js.br:15
eM @ vendor-core-0d62532059ea4067.min.js.br:15
tu @ vendor-core-0d62532059ea4067.min.js.br:15
nz @ vendor-core-0d62532059ea4067.min.js.br:15
nI @ vendor-core-0d62532059ea4067.min.js.br:15
t @ vendor-core-0d62532059ea4067.min.js.br:77
288Chrome is moving towards a new experience that allows users to choose to browse without third-party cookies.